--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,19 @@ services:
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
+      POSTGRES_USER: ${DB_USERNAME}
     volumes:
       - event-hive-data:/var/lib/postgresql/data
+
+  pgadmin:
+    container_name: pgadmin-event-hive
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
 
 volumes:
   event-hive-data:
