fix: change dotenv usage to @Value 1. Add cloudinary value to app properties 2. add those value to cloudinary config using @Value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #RSA Private key
 rsa.private-key=certs/private-key.pem
 rsa.public-key=certs/public-key.pem
+
+#CLODUINARY
+CLOUDINARY_NAME=${CLOUDINARY_NAME}
+CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
